[package]
name = "lightning-invoice"
version = "0.1.0"
authors = ["Sebastian Geisler <sgeisler@wh2.tu-dresden.de>"]
license = "Apache-2.0"
documentation = "https://docs.rs/lightning-invoice/"
keywords = [ "lightning", "bitcoin", "invoice", "BOLT11" ]
readme = "README.md"

[dependencies]
bech32 = "0.5.0"
secp256k1 = "0.11"
num-traits = "0.2"
bitcoin_hashes = "0.1"
