[package]
name = "lightning-invoice"
description = "Data structures to parse and serialize BOLT11 lightning invoices"
version = "0.2.0"
authors = ["Sebastian Geisler <sgeisler@wh2.tu-dresden.de>"]
license = "Apache-2.0"
documentation = "https://docs.rs/lightning-invoice/"
repository = "https://github.com/rust-bitcoin/rust-lightning-invoice"
keywords = [ "lightning", "bitcoin", "invoice", "BOLT11" ]
readme = "README.md"

[dependencies]
bech32 = "0.6.0"
secp256k1 = "0.12"
num-traits = "0.2"
bitcoin_hashes = "0.3"
